--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -428,7 +428,7 @@ display: block;
 }
 
 .funded_sia_logo img {
-    max-width: 250px;
+    max-width: 320px;
     width: 100%;
 }
 
@@ -480,7 +480,7 @@ display: block;
 }
 
 .fundedd_ateendie_col_6 {
-  width: 20%;
+  width: 35%;
   padding: 0 15px;
 }
 
@@ -490,16 +490,31 @@ display: block;
     font-weight: 900;
     color: #ff7518;
     margin-bottom: 35px;
-    padding-left: 7%;
+    padding-left: 0%;
 }
 /* Attendees */
 .fundedd_ateendie_attendees {
     /* justify-content: center; */
     text-align: center;
     margin-bottom: 40px;
-    padding-left: 6%;
+    padding-left: 0%;
 }
-
+.fundedd_ateendie_container-mn{
+      display: flex;
+    justify-content: space-between;
+}
+.fundedd_ateendie_container-mn .fundedd_ateendie_row{
+    width: 60%;
+}
+.fundedd_ateendie_row.nw{
+width: 100%;
+}
+.fundedd_ateendie_row.fundedd_ateendie_attendees{
+width: 100%;
+}
+.fundedd_ateendie_container-mn .fundedd_ateendie_row-mn{
+      width: 40%;
+}
 .fundedd_ateendie_attendee {
   text-align: center;
 }
@@ -524,7 +539,7 @@ display: block;
 }
 
 .fundedd_ateendie_desc_box p {
-  font-size: 14px;
+  font-size: 16px;
   line-height: 1.6;
   color: black;
       font-weight: 500;
@@ -3675,11 +3690,24 @@ display: none;
     background: #FF7518;
 }
 .bottom-main-page-maoin{
-      text-align: center;
+      
     margin-top: 30px;
 }
 
 @media all and (min-width:120px) and (max-width:680px){
+  .fundedd_ateendie_col_12{
+        padding-right: 0px;
+  }
+  .fundedd_ateendie_container-mn {
+    display: inline-block;
+    justify-content: space-between;
+}
+.fundedd_ateendie_container-mn .fundedd_ateendie_row-mn {
+    width: 100%;
+}
+.fundedd_ateendie_container-mn .fundedd_ateendie_row {
+    width: 100%;
+}
     .home-page-banner .DesktopBanner{
    display: none !important;
 }
