--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -579,6 +579,9 @@ width: 100%;
   color: black;
       font-weight: 500;
 }
+.fundedd_ateendie_desc_box p span{
+  color: #ff7a1a;
+}
 
 
 /* Responsive */
