--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -3737,7 +3737,34 @@ display: none;
     margin-top: 30px;
 }
 
+.press-frame-middle ul li{
+     width: 25%;
+    border: 1px solid #dacfcf;
+}
+.press-frame-middle ul{
+      margin-top: 20px !important;
+}
+.press-frame-middle ul li img{
+ width: 100%;
+ height: auto;
+}
+.press-frame-middle ul li h5{
+    color: #eb5e26;
+    font-size: 16px;
+    padding: 15px;
+}
+.press-frame-middle ul li p a{
+padding: 15px;
+padding-top: 0px;
+
+   text-decoration: underline;
+}
+
 @media all and (min-width:120px) and (max-width:680px){
+  .press-frame-middle ul li{
+     width: 100%;
+    border: 1px solid #dacfcf;
+}
   .fundedd_ateendie_col_12{
         padding-right: 0px;
   }
