--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -132,9 +132,9 @@
     .events-container {
       display: flex;
       flex-wrap: wrap;
-   gap: 32px;
+   
     width: 100%;
-    justify-content: flex-start;
+    justify-content: space-between;
     align-items: stretch;
     }
     .event-card {
@@ -143,9 +143,8 @@
       border-radius: 13px;
       padding: 32px 26px 20px 26px;
       box-shadow: 0 4px 24px rgba(255, 102, 0, 0.10);
-    flex: 1 1 47%;
-    min-width: 47%;
-    max-width: 47%;
+
+    width: 32%;
       display: flex;
       flex-direction: column;
       align-items: flex-start;
@@ -193,15 +192,14 @@
     }
    
     .event-logo {
-      margin-top: 40px;
-      margin-bottom: 10px;
+      margin-top: 20px;
+      margin-bottom: 0px;
       display: flex;
       align-items: center;
       gap: 11px;
     }
     .event-logo img {
-    object-fit: contain;
-    height: 110px;
+        width: 150px;
 }
 .event-arrow img{
         transform: rotate(4deg);
@@ -337,7 +335,7 @@
     gap: 18px;
   }
   .event-card {
-           padding: 14px 9px 10px 14px;
+           padding: 14px 9px 0px 14px;
         min-height: unset;
         width: 100%;
         flex: 1 1 100%;
